--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "vite-plugin-solid": "^2.5.0"
   },
   "dependencies": {
-    "solid-js": "^1.6.6"
+    "solid-js": "^1.6.6",
+    "solid-styled-components": "^0.28.5",
+    "solid-zustand": "^1.5.0"
   }
 }
