--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-template-solid",
+  "name": "imnotmoon-blog",
   "version": "0.0.0",
   "description": "",
   "scripts": {
@@ -23,8 +23,8 @@
   },
   "dependencies": {
     "solid-js": "^1.6.6",
-    "solid-router": "^0.3.3",
     "solid-styled-components": "^0.28.5",
+    "@solidjs/router": "^0.7.0",
     "solid-zustand": "^1.5.0"
   }
 }
