--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
+    "@next/mdx": "^13.4.13",
+    "@types/mdx": "^2.0.5",
     "classnames": "^2.3.2",
     "next": "13.4.12",
     "react": "18.2.0",
