--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/mdx": "^2.0.5",
     "classnames": "^2.3.2",
     "next": "13.4.12",
+    "next-mdx-remote": "^4.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
