--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@next/mdx": "^13.4.13",
     "@types/mdx": "^2.0.5",
     "classnames": "^2.3.2",
+    "date-fns": "^2.30.0",
     "next": "13.4.12",
     "next-mdx-remote": "^4.4.1",
     "react": "18.2.0",
